--- a/app/scss/partials/_icons.scss
+++ b/app/scss/partials/_icons.scss
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: "altimaIcons";
-	src: url('../../css/fonts/altimaIcons.eot');
-	src: url('../../css/fonts/altimaIcons.eot?#iefix') format('eot'),
-		url('../../css/fonts/altimaIcons.woff2') format('woff2'),
-		url('../../css/fonts/altimaIcons.woff') format('woff'),
-		url('../../css/fonts/altimaIcons.ttf') format('truetype'),
-		url('../../css/fonts/altimaIcons.svg#altimaIcons') format('svg');
+	src: url('fonts/altimaIcons.eot');
+	src: url('fonts/altimaIcons.eot?#iefix') format('eot'),
+		url('fonts/altimaIcons.woff2') format('woff2'),
+		url('fonts/altimaIcons.woff') format('woff'),
+		url('fonts/altimaIcons.ttf') format('truetype'),
+		url('fonts/altimaIcons.svg#altimaIcons') format('svg');
 }
 
 .icon:before {
